force-app/main/default/objects/EDD_Round_Robin__c/EDD_Round_Robin__c.object-meta.xml
<CustomObject>
    <label>EDD Round Robin</label>
    <nameField>
        <displayFormat>ED-{0000000}</displayFormat>
        <label>EDD Round Robin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDD Round Robins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>