force-app/main/default/objects/EDD_Round_Robin__c/fields/Add_in_Roundrobin__c.field-meta.xml
<CustomField>
    <fullName>Add_in_Roundrobin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add in Roundrobin</label>
    <type>Checkbox</type>
</CustomField>