force-app/main/default/objects/EDD_Round_Robin__c/fields/Cherry_Box__c.field-meta.xml
<CustomField>
    <fullName>Cherry_Box__c</fullName>
    <label>Cherry Box Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>everyDayDebt_30Days</fullName>
            </value>
            <value>
                <fullName>everyDayDebt12</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Zak Leads Re Blast</fullName>
            </value>
            <value>
                <fullName>Reassign 2 Min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>