force-app/main/default/objects/EDD_Round_Robin__c/fields/EDD_User__c.field-meta.xml
<CustomField>
    <fullName>EDD_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EDD User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EDD_Round_Robins</relationshipName>
    <type>Lookup</type>
</CustomField>