force-app/main/default/objects/EDD_Round_Robin__c/fields/Last_Assignment_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Time__c</fullName>
    <label>Last Assignment Time</label>
    <type>DateTime</type>
</CustomField>