force-app/main/default/objects/EDD_Round_Robin__c/fields/Short_Reason__c.field-meta.xml
<CustomField>
    <fullName>Short_Reason__c</fullName>
    <label>Short Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>