force-app/main/default/objects/EDD_Round_Robin__c/listViews/EDD12.listView-meta.xml
<ListView>
    <fullName>EDD12</fullName>
    <columns>NAME</columns>
    <columns>EDD_User__c</columns>
    <columns>Add_in_Roundrobin__c</columns>
    <columns>Short_Reason__c</columns>
    <columns>Cherry_Box__c</columns>
    <columns>Last_Assignment_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cherry_Box__c</field>
        <operation>equals</operation>
        <value>everyDayDebt12</value>
    </filters>
    <label>EDD12</label>
</ListView>